<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detil_look"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kontakjodoh.DetailLook">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/white"
            app:cardCornerRadius="5dp">


            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/gradient" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp">

                <ImageView
                    android:id="@+id/imgPhoto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/photoText"
                    android:layout_width="0dp"
                    android:layout_height="0dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/imgPhoto">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="20dp"
                            android:gravity="center_horizontal"
                            android:text="nama"
                            android:textColor="@color/grayLight"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="90dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/status"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:shadowColor="@color/colorPrimaryDark"
                            android:text="@string/status_app"
                            android:textColor="@color/grayLight"
                            android:textSize="15sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/tv_about"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginTop="8dp"
                            android:text="About"
                            android:textColor="@color/subtitle"
                            android:textSize="12sp" />
                    </LinearLayout>


                </RelativeLayout>

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/bio"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/ttl"
                    android:textColor="@color/subtitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TTL"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/tinggi"
                    android:textColor="@color/subtitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/TB"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/BB"
                    android:textColor="@color/subtitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/r3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bb"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/Job"
                    android:textColor="@color/subtitle"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/r4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/jobs"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>




        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:text="@string/perantara"
                android:textColor="@android:color/black"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="25dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:src="@drawable/a" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/profile_image">

                    <TextView
                        android:id="@+id/r5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nama"
                        android:textColor="@android:color/black"
                        android:textSize="15sp" />
                </LinearLayout>


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:text="@string/callP"
            android:id="@+id/callP"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textColor="@color/grayLight" />


    </LinearLayout>

</ScrollView>
